# selene

./: .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  devenv.nix  hatch_build.py  justfile  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/release-please/: config.js  config.json  manifest.json
selene-compilers/hugr_qis/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
selene-compilers/hugr_qis/python/selene_hugr_qis_compiler/: __init__.py  selene_hugr_qis_compiler.pyi
selene-compilers/hugr_qis/python/tests/: test_basic_generation.py
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_discard_array/aarch64-apple-darwin/: discard_array_aarch64-apple-darwin
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_discard_array/x86_64-apple-darwin/: discard_array_x86_64-apple-darwin
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_discard_array/x86_64-unknown-linux-gnu/: discard_array_x86_64-unknown-linux-gnu
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_discard_array/x86_64-windows-msvc/: discard_array_x86_64-windows-msvc
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_exit/aarch64-apple-darwin/: exit_aarch64-apple-darwin
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_exit/x86_64-apple-darwin/: exit_x86_64-apple-darwin
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_exit/x86_64-unknown-linux-gnu/: exit_x86_64-unknown-linux-gnu
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_exit/x86_64-windows-msvc/: exit_x86_64-windows-msvc
selene-compilers/hugr_qis/python/tests/snapshots/test_basic_generation/test_llvm_flip_some/aarch64-apple-darwin/: flip_some_aarch64-apple-darwin
selene-compilers/hugr_qis/rust/: array.rs  lib.rs  utils.rs
selene-core/: CHANGELOG.md  Cargo.toml  README.md  cbindgen.toml  hatch_build.py  pyproject.toml
selene-core/c/include/selene/: core_types.h  error_model.h  runtime.h  simulator.h
selene-core/examples/: cbindgen.toml
selene-core/examples/error_model/: Cargo.toml
selene-core/examples/error_model/python/selene_example_error_model_plugin/: __init__.py  plugin.py
selene-core/examples/error_model/rust/: lib.rs
selene-core/examples/runtime/: Cargo.toml
selene-core/examples/runtime/python/selene_example_runtime/: __init__.py  plugin.py
selene-core/examples/runtime/rust/: lib.rs
selene-core/examples/simulator/: Cargo.toml
selene-core/examples/simulator/python/selene_example_simulator_plugin/: __init__.py  plugin.py
selene-core/examples/simulator/rust/: lib.rs
selene-core/python/selene_core/: README.md
selene-core/python/selene_core/build_utils/: utils.py
selene-core/python/selene_core/build_utils/builtins/: helios.py
selene-core/rust/: encoder.rs  error_model.rs  lib.rs  runtime.rs  simulator.rs  time.rs  utils.rs
selene-core/rust/error_model/: helper.rs  interface.rs  plugin.rs  version.rs
selene-core/rust/runtime/: helper.rs  interface.rs  plugin.rs  version.rs
selene-core/rust/simulator/: README.md  conformance_testing.rs  helper.rs  interface.rs  plugin.rs  version.rs
selene-core/rust/simulator/conformance_testing/: framework.rs  single_qubit.rs  two_qubit.rs
selene-ext/error-models/depolarizing/: Cargo.toml
selene-ext/error-models/depolarizing/rust/: lib.rs
selene-ext/error-models/ideal/: Cargo.toml
selene-ext/error-models/ideal/rust/: lib.rs
selene-ext/error-models/simple-leakage/: Cargo.toml
selene-ext/error-models/simple-leakage/rust/: lib.rs
selene-ext/simulators/classical-replay/: Cargo.toml
selene-ext/simulators/classical-replay/rust/: arg_encoding.rs  lib.rs  tests.rs
selene-ext/simulators/coinflip/: Cargo.toml
selene-ext/simulators/coinflip/rust/: lib.rs  tests.rs
selene-ext/simulators/quest/: Cargo.toml
selene-ext/simulators/quest/python/selene_quest_plugin/: state.py
selene-ext/simulators/quest/rust/: lib.rs  tests.rs
selene-sim/: Cargo.toml  cbindgen.toml
selene-sim/c/: CMakeLists.txt
selene-sim/c/cmake/: SeleneConfig.cmake.in
selene-sim/python/selene_sim/: README.md  build.py  instance.py  process.py  timeout.py
selene-sim/python/selene_sim/result_handling/: __init__.py  data_stream.py  exception_encoding.py  extract_shot.py  parse_shot.py  result_stream.py
selene-sim/python/tests/: test_build_validation.py  test_cleanup.py  test_debug.py  test_depolarising_error_model.py  test_determinism.py  test_exceptions.py  test_guppy.py  test_replay.py  test_runtimes.py  test_timeout.py  test_unparsed.py
selene-sim/python/tests/snapshots/test_depolarising_error_model/test_1q_error/: counts_ideal  counts_p1q_100pc  counts_p1q_1pc  counts_p1q_25pc  counts_p1q_50pc
selene-sim/python/tests/snapshots/test_depolarising_error_model/test_2q_error/: counts_p2q_100pc  counts_p2q_1pc  counts_p2q_25pc  counts_p2q_50pc
selene-sim/python/tests/snapshots/test_depolarising_error_model/test_init_error/: counts_ideal  counts_pinit_100pc  counts_pinit_1pc  counts_pinit_25pc  counts_pinit_50pc
selene-sim/python/tests/snapshots/test_depolarising_error_model/test_measurement_error/: counts_pmeas_100pc  counts_pmeas_1pc  counts_pmeas_25pc  counts_pmeas_50pc
selene-sim/python/tests/snapshots/test_determinism/test_repetition/: full_results
selene-sim/python/tests/snapshots/test_guppy/test_metrics/: metrics
selene-sim/python/tests/snapshots/test_guppy/test_metrics_on_exit/: metrics_on_exit
selene-sim/python/tests/snapshots/test_guppy/test_rng/: rng
selene-sim/python/tests/snapshots/test_unparsed/test_flip_some_with_metrics_unparsed/: unparsed_metrics
selene-sim/rust/: emulator.rs  event_hooks.rs  ffi_interface.rs  lib.rs  selene_instance.rs
selene-sim/rust/event_hooks/: instruction_log.rs  metrics.rs
selene-sim/rust/selene_instance/: configuration.rs  metadata.rs  print.rs  quantum.rs  rng.rs  state_dump.rs
(+52 files in other folders)
