[project]
name = "selene-core"
version = "0.2.0a3"
requires-python = ">=3.10"
description = "The core interop library for Selene python interfaces"
readme = "README.md"

[project.urls]
homepage = "https://github.com/CQCL/selene/selene-core"
repository = "https://github.com/CQCL/selene/selene-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['python/selene_core']

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
cache-keys = [
    { file = "examples/**/*.rs" },
    { file = "examples/**/Cargo.lock" },
    { file = "examples/**/Cargo.toml" },
]
