[project]
name = "selene-core"
version = "0.2.0rc1"
requires-python = ">=3.10"
description = "The core interop library for Selene python interfaces"
readme = "python/selene_core/README.md"

[dependencies]
networkx = "~=3.0.0"

[project.urls]
homepage = "https://github.com/CQCL/selene/selene-core"
repository = "https://github.com/CQCL/selene/selene-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['python/selene_core']
exclude = ['python/selene_core/README.md']

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
cache-keys = [
    { file = "examples/**/*.rs" },
    { file = "examples/**/Cargo.lock" },
    { file = "examples/**/Cargo.toml" },
]
