[package]
name = "selene-sim"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "selene"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
selene-core = { path = "../selene-core" }
anyhow = { workspace = true }
rand = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
rand_pcg = "0.9"
url = "2.5"

[lints]
workspace = true
