[workspace]

[package]
name = "selene-hugr-qis-compiler"
authors = ["Seyon Sivarajah <seyon.sivarajah@quantinuum.com>"]
description = "Compiler for HUGR to LLVM targeting the Helios QIS"
version = "0.2.6"
readme = "README.md"
repository = "https://github.com/CQCL/selene/selene-compilers/hugr_qis"
license = "Apache-2.0"
edition = "2024"

[lib]
name = "selene_hugr_qis_compiler"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.24", features = ["abi3-py310", "anyhow"] }
serde_json = "1.0.143"
tracing = "0.1"
itertools = "0.14.0"
tket = "0.15"
tket-qsystem = { version = "0.21", features = ["llvm"] }

[features]
default = []
extension-module = ["pyo3/extension-module"]

[build-dependencies]
cbindgen = "0.29"
pyo3-build-config = "0.24"

[dev-dependencies]
rstest = "0.25"
serde = "1.0"
typetag = "0.2"

[package.metadata.cargo-machete]
ignored = ["cbindgen", "pyo3-build-config"]

[patch.crates-io]
# Uncomment to use unreleased versions of tket2
tket = { git = "https://github.com/CQCL/tket2", branch = "ba-test" }
tket-qsystem = { git = "https://github.com/CQCL/tket2", branch = "ba-test"}
hugr = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
hugr-core = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
hugr-cli = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
hugr-passes = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
hugr-llvm = { git = "https://github.com/CQCL/hugr", "branch" = "ts/ba-copy-discard" }
